feat: tools section added

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import './assets/scss/Header.scss';
 @import './assets/scss/Home.scss';
 @import './assets/scss/About.scss';
-@import './assets/scss/Projects.scss'
+@import './assets/scss/Projects.scss';
+@import './assets/scss/Tool.scss';
