feat: contact screen finished

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,4 @@
 @import './assets/scss/About.scss';
 @import './assets/scss/Projects.scss';
 @import './assets/scss/Tool.scss';
+@import './assets/scss/Contact.scss';
