--- a/src/assets/scss/Home.scss
+++ b/src/assets/scss/Home.scss
@@ -1,6 +1,7 @@
 .banner {
     width: 100%;
     height: 350px;
+
     .main_banner {
         position: absolute;
         top: 196px;
@@ -11,29 +12,29 @@
         max-height: 667px;
         width: 60%;
         height: 60%;
-    
+
         @media (min-width: 2000px) {
             max-width: 78%;
             width: 100%;
             height: 100%;
         }
-    
-    
-    
+
+
+
         .shadow_of_banner {
             position: absolute;
             max-width: 1320px;
             max-height: 667px;
             width: 100%;
             height: 100%;
-            
+
             @media (min-width: 2000px) {
                 max-width: 100%;
                 width: 100%;
                 height: 100%;
             }
         }
-    
+
         .computer {
             width: 100%;
             height: 100%;
@@ -46,7 +47,8 @@
     width: 100%;
     height: 500px;
     background-color: #F2F9FF;
-    @media(min-width: 1450px){
+
+    @media(min-width: 1450px) {
         height: 820px;
     }
 }
@@ -63,14 +65,14 @@
     width: 100%;
     height: 100%;
     background-color: #F2F9FF;
-    
+
     .toolsInfo {
         margin: 32px 300px 32px 300px;
 
         @media (min-width: 1441px) {
             margin: 32px 300px 32px 300px;
         }
-    
+
         @media (min-width: 2000px) {
             margin: 32px 300px 32px 300px;
         }
@@ -80,10 +82,20 @@
             color: #41556A;
             text-transform: uppercase;
             font-size: 24px;
-            
+
             h2 {
                 font-weight: 500;
             }
         }
     }
+}
+
+.contact {
+    padding: 24px 0 24px 0;
+    width: 100%;
+    height: 1030px;
+    background-image: url('../images/background_contact.png');
+    background-size: cover;
+    display: flex;
+    justify-content: center;
 }
