--- a/src/assets/scss/Tool.scss
+++ b/src/assets/scss/Tool.scss
@@ -23,6 +23,7 @@
         width: 100%;
         height: 140px;
         background-color: #ffffff;
+        box-shadow: 0 0 4px 0px #41556a2c;
         display: flex;
         justify-content: center;
         align-items: center;
